--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@
   <li class="list-group-item">Vestibulum at eros</li>
 </ul>
 
+<div class="progress">
+  <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+    <span class="sr-only">60% Complete</span>
+  </div>
+</div>
+
 	<script src="js/jquery-3.0.0.js"></script>
 	<script src="js/boostrap.js"></script>
 </body>
